# cian

./: .gitignore  .wezterm.lua  Cargo.toml  LICENSE  README.md  hoge.txt
.github/workflows/: release.yml
crates/cian-bin/: Cargo.toml
crates/cian-bin/src/: main.rs
crates/cian-core/: Cargo.toml
crates/cian-core/src/: lib.rs  ops.rs
crates/cian-lua/: Cargo.toml
crates/cian-lua/src/: lib.rs
crates/cian-pty/: Cargo.toml
crates/cian-pty/src/: lib.rs
crates/cian-tui/: Cargo.toml
crates/cian-tui/src/: lib.rs
examples/: init.lua
packaging/windows/: README.txt  install.ps1
