[workspace]
resolver = "2"
members = [
    "crates/cian-core",
    "crates/cian-tui",
    "crates/cian-pty",
    "crates/cian-lua",
    "crates/cian-bin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/taketan9/cian"

[workspace.dependencies]
cian-core = { path = "crates/cian-core" }
cian-tui  = { path = "crates/cian-tui"  }
cian-pty  = { path = "crates/cian-pty"  }
cian-lua  = { path = "crates/cian-lua"  }

# External crates (pinned at workspace level so all crates use the same version)
ratatui   = "0.29"
crossterm = "0.28"
anyhow    = "1"
arboard   = "3"
fs_extra  = "1.3"
toml      = "0.8"
serde     = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
