[package]
name = "cian-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terminal UI for cian: ratatui rendering, input, layout, popups"

[dependencies]
cian-core = { workspace = true }
cian-lua  = { workspace = true }
ratatui   = { workspace = true }
crossterm = { workspace = true }
anyhow    = { workspace = true }
arboard   = { workspace = true }
toml      = { workspace = true }
serde     = { workspace = true }
